--- a/style.css
+++ b/style.css
@@ -4,16 +4,23 @@
   box-sizing: border-box;
 }
 section{
-  width:300px;
-  height: 300px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container{
+  width:603px;
+  height: 603px;
   display:flex;
   flex-wrap:wrap;
   align-items: center;
   align-content: center;
+  justify-content: center;
 }
 div{
-  height:98px;
-  width:98px;
-  background-color:red;
+  height:150px;
+  width:150px;
+  background-color: red;
   border: 1px solid white;
 }
